修改主题色--element-variable.scss

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-theme": "^2.0.1",
     "element-ui": "^2.3.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -38,6 +39,8 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "element-theme-chalk": "^2.3.6",
+    "element-theme-default": "^1.4.13",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
