--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-theme": "^2.0.1",
     "element-ui": "^2.3.6",
+    "jsonp": "^0.2.1",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
+    "lodash": "^4.17.10",
+    "path-to-regexp": "^2.2.1",
+    "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
