--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "element-theme": "^2.0.1",
     "element-ui": "^2.3.6",
+    "faker": "^4.1.0",
     "jsonp": "^0.2.1",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
@@ -67,6 +68,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
