--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonp": "^0.2.1",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
+    "lib-flexible": "^0.3.2",
     "lodash": "^4.17.10",
     "path-to-regexp": "^2.2.1",
     "qs": "^6.5.2",
@@ -75,6 +76,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
